remove dropdown menu

--- a/index.html
+++ b/index.html
@@ -52,24 +52,8 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#home">Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Trips
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#trips"> Pussy trip <i class="fas fa-walking"></i> </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#trips"> Savage trip <i class="fab fa-studiovinari"></i> </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#trips"> Try escape trip <i class="fas fa-skull-crossbones"> </i></a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#trips"> Train trip <i class="fas fa-user-secret"> </i></a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#trips"> No road trip <i class="fas fa-book-dead"> </i></a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#trips"> Speed hack trip <i class="fas fa-dragon"> </i></a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="#trips">Trips</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#calendar">Calendar</a>
