add fire button

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="col-10 col-lg-10 info">
                     <h2>The easiest way to plan personalized trips with local travel experts</h2>
                     <p>Get your vacation custom-made by a trip designer that know what the guidebooks don’t</p>
-                    <a href="" class="btn btn-lg">Explore</a>
+                    <a href="#calendar" class="btn btn-lg">Explore</a>
                 </div>
             </div>
         </div>
