--- a/index.html
+++ b/index.html
@@ -467,6 +467,14 @@
             </div>
         </div>
     </section>
+
+    <footer class="page-footer font-small bg-dark">
+
+        <div class="footer-copyright text-center text-white py-3">© 2019 Copyright:
+            <a href="https://jarki-zaezd.github.io/"> Jarki-Zaezd.com</a>
+        </div>
+
+    </footer>
     <script src="src/javascript/jquery-3.3.1.min.js"></script>
     <script src="src/javascript/constant.js"></script>
     <script src="./dist/main.js"></script>
