add animation on choose-trip

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <i class="fa fa-times" aria-hidden="true"></i>
             <h3>Click on type and choose trip</h3>
             <div class="select-aria">
-                <a class="select-item" href="#" data-filter='.trip-1'>Pussy trip</a>
+                <a class="select-item red-color" href="#" data-filter='.trip-1'>Pussy trip</a>
                 <a class="select-item" href="#" data-filter='.trip-2'>Savage trip</a>
                 <a class="select-item" href="#" data-filter='.trip-3'>Try escape trip</a>
                 <a class="select-item" href="#" data-filter='.trip-4'>Train trip</a>
