--- a/trips.html
+++ b/trips.html
@@ -29,7 +29,13 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">Z<span><img src="src/assets/images/logo-illuminati.png"></span>EZD</a>
 
+        <div class="d-inline trips-info">
+            <h3>By Gangsta riders</h3>
+        </div>
+    </nav>
 
 </body>
 
