add html logic to trip section

--- a/trips.html
+++ b/trips.html
@@ -36,7 +36,143 @@
             <h3>By Gangsta riders</h3>
         </div>
     </nav>
-
+    <section id="trips-container">
+        <div class="container">
+            <div class="row">
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <header>
+                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                        <h3>Lorem ipsum dolor</h3>
+                    </header>
+                    <p class="trip-desription">
+                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
+                        volutpat lacus placerat malesuada.
+                    </p>
+                    <button class="btn btn-danger learn-more">Learn more</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 </body>
 
 </html>
