--- a/trips.html
+++ b/trips.html
@@ -172,7 +172,13 @@
             </div>
         </div>
     </section>
+    <footer class="page-footer font-small bg-dark">
+
+            <div class="footer-copyright text-center text-white py-3">© 2019 Copyright:
+                <a href="https://jarki-zaezd.github.io/"> Jarki-Zaezd.com</a>
+            </div>
     
+        </footer>
 </body>
 
 </html>
