--- a/trips.html
+++ b/trips.html
@@ -38,19 +38,22 @@
     </nav>
     <section id="trips-container">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center flex-wrap">
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
@@ -174,11 +177,11 @@
     </section>
     <footer class="page-footer font-small bg-dark">
 
-            <div class="footer-copyright text-center text-white py-3">© 2019 Copyright:
-                <a href="https://jarki-zaezd.github.io/"> Jarki-Zaezd.com</a>
-            </div>
-    
-        </footer>
+        <div class="footer-copyright text-center text-white py-3">© 2019 Copyright:
+            <a href="https://jarki-zaezd.github.io/"> Jarki-Zaezd.com</a>
+        </div>
+
+    </footer>
 </body>
 
 </html>
