--- a/trips.html
+++ b/trips.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:500,400,700,800,300,600" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <script src="src/javascript/jquery-3.3.1.min.js"></script>
     <script src="src/javascript/popper.min.js"></script>
     <script src="src/javascript/bootstrap.min.js"></script>
@@ -38,7 +39,7 @@
     </nav>
     <section id="trips-container">
         <div class="container">
-            <div class="row justify-content-center flex-wrap">
+            <div class="row justify-content-around flex-wrap">
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
                     <div class="info-container">
@@ -57,120 +58,179 @@
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
                 <div class="trip-item">
                     <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <header>
-                        <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                        <h3>Lorem ipsum dolor</h3>
-                    </header>
-                    <p class="trip-desription">
-                        Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                        tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis
-                        volutpat lacus placerat malesuada.
-                    </p>
-                    <button class="btn btn-danger learn-more">Learn more</button>
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
+                </div>
+                <div class="trip-item">
+                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
+                    <div class="info-container">
+                        <header>
+                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
+                            <h3>Lorem ipsum dolor</h3>
+                        </header>
+                        <p class="trip-desription">
+                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
+                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
+                            quis
+                            volutpat lacus placerat malesuada.
+                        </p>
+                        <button class="btn btn-danger learn-more">Learn more</button>
+                    </div>
                 </div>
             </div>
         </div>
