change navbar background color

--- a/trips.html
+++ b/trips.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Z<span><img src="src/assets/images/logo-illuminati.png"></span>EZD</a>
 
         <div class="d-inline trips-info">
