connect weather icons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_green.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <link rel="stylesheet" href="src/assets/css/animate.min.css">
+    <link rel="stylesheet" href="src/assets/css/weather-icons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script>
         new WOW().init();
@@ -479,6 +480,7 @@
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="src/javascript/gallery.js"></script>
     <script src="src/javascript/graph.js"></script>
+    <script src="src/javascript/scrap.js"></script>
 </body>
 
 </html>
