--- a/trips.html
+++ b/trips.html
@@ -31,7 +31,7 @@
 
 <body>
     <nav class="navbar fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Z<span><img src="src/assets/images/logo-illuminati.png"></span>EZD</a>
+        <a class="navbar-brand" href="index.html">Z<span><img src="src/assets/images/logo-illuminati.png"></span>EZD</a>
 
         <div class="d-inline trips-info">
             <h3>By Gangsta riders</h3>
