add weather icons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_green.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <link rel="stylesheet" href="src/assets/css/animate.min.css">
+    <link rel="stylesheet" href="src/assets/css/weather-icons-wind.min.css">
     <link rel="stylesheet" href="src/assets/css/weather-icons.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script>
@@ -465,7 +466,6 @@
             </div>
         </div>
     </section>
-
     <footer class="page-footer font-small bg-dark">
 
         <div class="footer-copyright text-center text-white py-3">© 2019 Copyright:
