change js logic

--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
 
     </footer>
     <script src="src/javascript/jquery-3.3.1.min.js"></script>
+    <script src="src/javascript/weather.class.js"></script>
     <script src="src/javascript/constant.js"></script>
     <script src="./dist/main.js"></script>
     <script src="./src/javascript/app.js"></script>
