--- a/onetrip.html
+++ b/onetrip.html
@@ -65,12 +65,25 @@
         margin: 0;
         padding: 0;
       }
+      #legend {
+        font-family: Arial, sans-serif;
+        background: #fff;
+        padding: 10px;
+        margin: 10px;
+        border: 3px solid #000;
+      }
+      #legend h3 {
+        margin-top: 0;
+      }
+      #legend img {
+        vertical-align: middle;
+      }
     </style>
   </head>
 
   <body>
     <div id="map"></div>
-    <div id="directions-panel"></div>
+    <div id="legend"><h3>Legend</h3></div>
     <section id="trip-info">
       <div class="container">
         <div class="row">
