add some coll stuff

--- a/onetrip.html
+++ b/onetrip.html
@@ -57,7 +57,7 @@
 
     <style>
       #map {
-        height: 70%;
+        height: 100%;
       }
       html,
       body {
@@ -65,7 +65,7 @@
         margin: 0;
         padding: 0;
       }
-      #legend {
+      /* #legend {
         font-family: Arial, sans-serif;
         background: #fff;
         padding: 10px;
@@ -77,7 +77,7 @@
       }
       #legend img {
         vertical-align: middle;
-      }
+      } */
     </style>
   </head>
 
