set fixed top to nav bar

--- a/index.html
+++ b/index.html
@@ -55,16 +55,12 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#trips">Trips</a>
+                    <a class="nav-link" href="/trips">Trips</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#stats">Trip stats</a>
+                    <a class="nav-link" href="/statistic">Trip stats</a>
                 </li>
             </ul>
-            <div class="btn-toolbar mr-4" role="toolbar" aria-label="Toolbar with button groups">
-                <button type="button" class="btn btn-outline-success mr-3">Log in</button>
-                <button type="button" class="btn btn-outline-success">Sign up</button>
-            </div>
         </div>
     </nav>
     <section id="home">
