--- a/tripStat.html
+++ b/tripStat.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
         <a class="navbar-brand" href="#">Z<span><img src="src/assets/images/logo-illuminati.png"></span>EZD</a>
 
@@ -51,23 +51,20 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/trips">Trips</a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#calendar">Calendar</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#trips">Trips</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#stats">Trip stats</a>
+                    <a class="nav-link" href="/statistic">Trip stats</a>
                 </li>
             </ul>
-            <div class="btn-toolbar mr-4" role="toolbar" aria-label="Toolbar with button groups">
+            <!-- <div class="btn-toolbar mr-4" role="toolbar" aria-label="Toolbar with button groups">
                 <button type="button" class="btn btn-outline-success mr-3">Log in</button>
                 <button type="button" class="btn btn-outline-success">Sign up</button>
-            </div>
+            </div> -->
         </div>
     </nav>
     <section id="stats">
