add page with TripList

--- a/tripChoose.html
+++ b/tripChoose.html
@@ -51,7 +51,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item active">
@@ -61,16 +61,12 @@
                     <a class="nav-link" href="/statistic">Trip stats</a>
                 </li>
             </ul>
-            <!-- <div class="btn-toolbar mr-4" role="toolbar" aria-label="Toolbar with button groups">
-                <button type="button" class="btn btn-outline-success mr-3">Log in</button>
-                <button type="button" class="btn btn-outline-success">Sign up</button>
-            </div> -->
         </div>
     </nav>
     <section id="trips">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="card" data-trip="pussy-trip">
+                <div class="card" data-trip="chill">
                     <div class="card-body">
                         <i class="fas fa-walking"></i>
                         <h3>Pussy trip</h3>
@@ -81,10 +77,10 @@
                         <img src="src/assets/images/gallery-1.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Start riding</a>
+                        <a class='btn btn-danger' href="/trips/chill">Start riding</a>
                     </div>
                 </div>
-                <div class="card" data-trip="pussy-trip">
+                <div class="card" data-trip="savage">
                     <div class="card-body">
                         <i class="fab fa-studiovinari"></i>
                         <h3>Savage trip</h3>
@@ -95,10 +91,10 @@
                         <img src="src/assets/images/gallery-2.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Start riding</a>
+                        <a class='btn btn-danger' href="/trips/savage">Start riding</a>
                     </div>
                 </div>
-                <div class="card" data-trip="pussy-trip">
+                <div class="card" data-trip="escape">
                     <div class="card-body">
                         <i class="fas fa-skull-crossbones"></i>
                         <h3>Try escape trip</h3>
@@ -109,10 +105,10 @@
                         <img src="src/assets/images/gallery-3.jpeg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Start riding</a>
+                        <a class='btn btn-danger' href="/trips/escape">Start riding</a>
                     </div>
                 </div>
-                <div class="card" data-trip="pussy-trip">
+                <div class="card" data-trip="train">
                     <div class="card-body">
                         <i class="fas fa-user-secret"></i>
                         <h3>Train trip</h3>
@@ -123,10 +119,10 @@
                         <img src="src/assets/images/gallery-4.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Start riding</a>
+                        <a class='btn btn-danger' href="/trips/train">Start riding</a>
                     </div>
                 </div>
-                <div class="card" data-trip="pussy-trip">
+                <div class="card" data-trip="road">
                     <div class="card-body">
                         <i class="fas fa-book-dead"></i>
                         <h3>No road trip</h3>
@@ -137,10 +133,10 @@
                         <img src="src/assets/images/gallery-5.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Start riding</a>
+                        <a class='btn btn-danger' href="/trips/road">Start riding</a>
                     </div>
                 </div>
-                <div class="card" data-trip="pussy-trip">
+                <div class="card" data-trip="speed">
                     <div class="card-body">
                         <i class="fas fa-dragon"></i>
                         <h3>Speed hack trip</h3>
@@ -151,7 +147,7 @@
                         <img src="src/assets/images/gallery-6.jpg" alt="">
                     </div>
                     <div class="card-footer">
-                        <a class='btn btn-danger' href="#">Start riding</a>
+                        <a class='btn btn-danger' href="/trip/speed">Start riding</a>
                     </div>
                 </div>
             </div>
