--- a/trips.html
+++ b/trips.html
@@ -17,21 +17,21 @@
         ga('create', 'UA-135430757-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <link href="src/assets/css/font-awesome-all.min.css" rel="stylesheet">
-    <link href="src/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../src/assets/css/font-awesome-all.min.css" rel="stylesheet">
+    <link href="../src/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:500,400,700,800,300,600" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <script src="src/javascript/jquery-3.3.1.min.js"></script>
-    <script src="src/javascript/popper.min.js"></script>
-    <script src="src/javascript/bootstrap.min.js"></script>
-    <link href="src/assets/css/index.css" rel="stylesheet">
+    <script src="../src/javascript/jquery-3.3.1.min.js"></script>
+    <script src="../src/javascript/popper.min.js"></script>
+    <script src="../src/javascript/bootstrap.min.js"></script>
+    <link href="../src/assets/css/index.css" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Z<span><img src="src/assets/images/logo-illuminati.png"></span>EZD</a>
+        <a class="navbar-brand" href="index.html">Z<span><img src="../src/assets/images/logo-illuminati.png"></span>EZD</a>
 
         <div class="d-inline trips-info">
             <h3>By Gangsta riders</h3>
@@ -40,198 +40,6 @@
     <section id="trips-container">
         <div class="container">
             <div class="row justify-content-around flex-wrap">
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
-                <div class="trip-item">
-                    <img src="src/assets/images/gallery-1.jpg" alt="" srcset="">
-                    <div class="info-container">
-                        <header>
-                            <h4>MAECENAS SAPIEN FEUGIAT EX PURUS</h4>
-                            <h3>Lorem ipsum dolor</h3>
-                        </header>
-                        <p class="trip-desription">
-                            Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet
-                            tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus,
-                            quis
-                            volutpat lacus placerat malesuada.
-                        </p>
-                        <button class="btn btn-danger learn-more">Learn more</button>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -242,6 +50,7 @@
         </div>
 
     </footer>
+    <script src="../src/javascript/loadTripList.js"></script>
 </body>
 
 </html>
