--- a/onetrip.html
+++ b/onetrip.html
@@ -30,16 +30,16 @@
     ga("create", "UA-135430757-1", "auto");
     ga("send", "pageview");
   </script>
-  <link href="src/assets/css/font-awesome-all.min.css" rel="stylesheet" />
-  <link href="src/assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../../src/assets/css/font-awesome-all.min.css" rel="stylesheet" />
+  <link href="../../src/assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:500,400,700,800,300,600" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
-  <script src="src/javascript/jquery-3.3.1.min.js"></script>
-  <script src="src/javascript/popper.min.js"></script>
-  <script src="src/javascript/bootstrap.min.js"></script>
-  <link href="src/assets/css/index.css" rel="stylesheet" />
+  <script src="../../src/javascript/jquery-3.3.1.min.js"></script>
+  <script src="../../src/javascript/popper.min.js"></script>
+  <script src="../../src/javascript/bootstrap.min.js"></script>
+  <link href="../../src/assets/css/index.css" rel="stylesheet" />
 
   <style>
     #map {
@@ -84,7 +84,7 @@
       </div>
     </div>
   </section>
-  <script src="src/javascript/maps.js"></script>
+  <script src="../../src/javascript/maps.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss&callback=initMap"
     async defer></script>
 </body>
