--- a/onetrip.html
+++ b/onetrip.html
@@ -85,7 +85,9 @@
     </div>
   </section>
   <script src="../../src/javascript/maps.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss&callback=initMap"
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss&callback=initMap"
+    async defer></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss"
     async defer></script>
 </body>
 
