--- a/onetrip.html
+++ b/onetrip.html
@@ -1,59 +1,83 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>List of trips</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script>
+      (function(i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function() {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        "https://www.google-analytics.com/analytics.js",
+        "ga"
+      );
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>List of trips</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script>
-    (function (i, s, o, g, r, a, m) {
-      i["GoogleAnalyticsObject"] = r;
-      (i[r] =
-        i[r] ||
-        function () {
-          (i[r].q = i[r].q || []).push(arguments);
-        }),
-        (i[r].l = 1 * new Date());
-      (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m);
-    })(
-      window,
-      document,
-      "script",
-      "https://www.google-analytics.com/analytics.js",
-      "ga"
-    );
+      ga("create", "UA-135430757-1", "auto");
+      ga("send", "pageview");
+    </script>
+    <link
+      href="../../src/assets/css/font-awesome-all.min.css"
+      rel="stylesheet"
+    />
+    <link href="../../src/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:500,400,700,800,300,600"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Metal+Mania"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Coming+Soon"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
+    <script src="../../src/javascript/jquery-3.3.1.min.js"></script>
+    <script src="../../src/javascript/popper.min.js"></script>
+    <script src="../../src/javascript/bootstrap.min.js"></script>
+    <link href="../../src/assets/css/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../src/assets/css/animate.min.css" />
 
-    ga("create", "UA-135430757-1", "auto");
-    ga("send", "pageview");
-  </script>
-  <link href="../../src/assets/css/font-awesome-all.min.css" rel="stylesheet" />
-  <link href="../../src/assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:500,400,700,800,300,600" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
-  <script src="../../src/javascript/jquery-3.3.1.min.js"></script>
-  <script src="../../src/javascript/popper.min.js"></script>
-  <script src="../../src/javascript/bootstrap.min.js"></script>
-  <link href="../../src/assets/css/index.css" rel="stylesheet" />
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss"
+      async
+      defer
+    ></script>
 
-  <style>
-    #map {
-      height: 100%;
-    }
+    <style>
+      #map {
+        height: 100%;
+      }
 
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
 
-    /* #legend {
+      /* #legend {
         font-family: Arial, sans-serif;
         background: #fff;
         padding: 10px;
@@ -66,29 +90,35 @@
       #legend img {
         vertical-align: middle;
       } */
-  </style>
-</head>
+    </style>
+  </head>
 
-<body>
-  <div id="map"></div>
-  <div id="legend">
-    <h3>Legend</h3>
-  </div>
-  <section id="trip-info">
-    <div class="container">
-      <div class="row">
-        <div class="info">
-          <p class="totalDist">Total:</p>
-        </div>
-        <div class="charter"></div>
+  <body>
+    <section class="fog">
+      <div class="fog__container">
+        <div class="fog__img fog__img--first"></div>
+        <div class="fog__img fog__img--second"></div>
       </div>
+    </section>
+    <div id="map"></div>
+    <div id="legend">
+      <h3>Legend</h3>
     </div>
-  </section>
-  <script src="../../src/javascript/maps.js"></script>
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss&callback=initMap"
-    async defer></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss"
-    async defer></script>
-</body>
-
+    <section id="trip-info">
+      <div class="container">
+        <div class="row">
+          <div class="info">
+            <p class="totalDist">Total:</p>
+          </div>
+          <div class="charter"></div>
+        </div>
+      </div>
+    </section>
+    <script src="../../src/javascript/maps.js"></script>
+    <!-- <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBH2ExjWU2WzkezabgRmb_WIIpnldlhAss&callback=initMap"
+      async
+      defer
+    ></script> -->
+  </body>
 </html>
